# semser

./: .gitignore  README.md  pyproject.toml  requirements.txt  semantic_search.py  zotero_to_semantic_search.py
semser/: semantic_search.py
