[tool.poetry]
name = "semser-cli"
version = "0.1.0"
description = "A simple Semantic Scholar search CLI."
authors = ["fergus <fergusfettes@gmail.com>"]
packages = [{ include = "semser" }]

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.9.0"
semanticscholar = ">=0.7.0"
rich = ">=13.7.0"
requests = ">=2.31.0"

[tool.poetry.scripts]
semser = "semser.semantic_search:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
